--- a/wiki/ProjectInfo.wiki
+++ b/wiki/ProjectInfo.wiki
@@ -56,8 +56,11 @@ HTML documentation is also included in the `doc` directory of each distribution.
 
 Various testing techniques are provided in the [http://forestent.com/wiki/ShUnit2:BasicTesting Basic] and [http://forestent.com/wiki/ShUnit2:AdvancedTesting Advanced] pages.
 
-Examples
-  * Writing a function to convert a [http://forestent.com/wiki/ShUnit2:AbsolutePathExample relative path to an absolute path].
+=== Examples ===
+One case study for writing a function to convert a [http://forestent.com/wiki/ShUnit2:AbsolutePathExample relative path to an absolute path].
+
+Starting with the 2.1.x series, additional examples are included with the source code.
+  * `mkdir_test.sh` – demonstration of testing an existing Unix command (e.g. an already written shell script)
 
 === Mailing Lists ===
 A [mailto:shunit2-users@lists.sourceforge.net shunit2-users@lists.sourceforge.net] mailing list now exists. Everyone is free to [https://lists.sourceforge.net/lists/listinfo/shunit2-users subscribe] to the list.
