--- a/wiki/ProjectInfo.wiki
+++ b/wiki/ProjectInfo.wiki
@@ -41,6 +41,7 @@ If you would like to verify the GPG signatures of the releases, please take a lo
 
 === 2.1.x - Development Releases ===
 || *Release* || *Date* || *Known Issues* ||
+|| [http://shunit2.googlecode.com/files/shunit2-2.1.4.tgz 2.1.4] || Fri Jul 11 2008 || ||
 || [http://downloads.sourceforge.net/shunit2/shunit2-2.1.3.tgz 2.1.3] || Sun May 10 2008 || Doesn't work with *`zsh`* versions prior to 4.0. ||
 || [http://downloads.sourceforge.net/shunit2/shunit2-2.1.2.tgz 2.1.2] || Mon Dec 31 2007 || ||
 || [http://downloads.sourceforge.net/shunit2/shunit2-2.1.1.tgz 2.1.1] || Fri Jul 13 2007 || ||
