--- a/wiki/ProjectInfo.wiki
+++ b/wiki/ProjectInfo.wiki
@@ -58,7 +58,7 @@ HTML documentation is also included in the `doc` directory of each distribution.
 [http://shunit2.googlecode.com/svn/trunk/source/2.0/doc/shunit2.html 2.0] ·
 [http://shunit2.googlecode.com/svn/trunk/source/2.1/doc/shunit2.html 2.1]
 
-You might also be interested in our GeneralFAQs page.
+You might also be interested in our GeneralFaq page.
 
 === Examples ===
 One case study for writing a function to convert a [http://forestent.com/wiki/ShUnit2:AbsolutePathExample relative path to an absolute path].
