--- a/wiki/ProjectInfo.wiki
+++ b/wiki/ProjectInfo.wiki
@@ -62,13 +62,13 @@ HTML documentation is also included in the `doc` directory of each distribution.
 You might also be interested in our GeneralFaq page.
 
 === Examples ===
-One case study for writing a function to convert a [http://forestent.com/wiki/ShUnit2:AbsolutePathExample relative path to an absolute path].
+One case study for writing a function to convert a relative path to an absolute path ([http://code.google.com/p/shunit2/wiki/HOWTO_TestAbsolutePathFn HOWTO_TestAbsolutePathFn]).
 
 Starting with the 2.1.x series, additional examples are included with the source code in the `examples` directory.
   * `mkdir_test.sh` – demonstration of testing an existing Unix command (e.g. an already written shell script)
 
 === Mailing Lists ===
-A [mailto:shunit2-users@lists.sourceforge.net shunit2-users@lists.sourceforge.net] mailing list now exists. Everyone is free to [https://lists.sourceforge.net/lists/listinfo/shunit2-users subscribe] to the list.
+A [mailto:shunit2-users@googlegroups.com shunit2-users@googlegroups.com] mailing list now exists. Everyone is free to [http://groups.google.com/group/shunit2-users/topics view the discussions] or to subscribe.
 
 == Miscellaneous ==
 
@@ -78,4 +78,4 @@ shUnit2 is licensed under the GNU [http://www.gnu.org/licenses/lgpl.html Lesser 
 === Thanks ===
 A list of contributors is provided with each release (found as `doc/contributors.txt`). Many thanks go out to each of these individuals for finding bugs and/or providing patches.
 
-Hosting resources are gracefully provided by both [http://google.com/ Google] and [http://sourceforge.net/ SourceForge].
+Hosting resources are gracefully provided by [http://code.google.com/ Google Code].
